--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,8 +14,10 @@
         </Grid.RowDefinitions>
 
         <!-- Title Bar -->
-        <Grid Grid.Row="0" Background="Transparent">
-            <TextBlock Text="Settings" 
+        <Grid x:Name="TitleBarArea" Grid.Row="0" Background="Transparent">
+            <TextBlock Text="Response modifier for Proxifier" 
+                       FontSize="18"
+                       FontWeight="SemiBold"
                        Margin="12,8,0,8"/>
         </Grid>
 
@@ -32,7 +34,10 @@
                            PaneDisplayMode="Left"
                            IsSettingsVisible="False"
                            IsBackButtonVisible="Collapsed"
-                           OpenPaneLength="250"
+                           OpenPaneLength="150"
+                           CompactPaneLength="48"
+                           IsPaneToggleButtonVisible="False"
+                           SelectionChanged="NavView_SelectionChanged"
                            Background="{ThemeResource CardBackgroundFillColorDefaultBrush}">
                 <NavigationView.MenuItems>
                     <NavigationViewItem Content="Targets" Tag="targets">
