--- a/App.xaml
+++ b/App.xaml
@@ -3,7 +3,8 @@
     x:Class="WinUI_V3.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:WinUI_V3">
+    xmlns:local="using:WinUI_V3"
+    xmlns:helpers="using:WinUI_V3.Helpers">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -29,6 +30,11 @@
                     <SolidColorBrush x:Key="WindowCaptionForegroundPressed" Color="#FFFFFFFF"/>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
+            
+            <!-- Converters -->
+            <helpers:BoolToStringConverter x:Key="BoolToStringConverter"/>
+            <helpers:BoolToColorConverter x:Key="BoolToColorConverter"/>
+            
             <!-- Other app resources here -->
         </ResourceDictionary>
     </Application.Resources>
